--- a/stayle.css
+++ b/stayle.css
@@ -64,31 +64,31 @@ body{
         height: 500px;
         width: 100%;
         display: grid;
-        grid-template-columns: repeat(12,1fr);
-        grid-template-rows:repeat(12,1fr);
+        grid-template-columns: repeat(14,1fr);
+        grid-template-rows:repeat(14,1fr);
     }
 
-    /* .s1{
-    background-color: blue;
-    grid-column:1/4 ;
-    grid-row:3/5 ;
+    .s1{
+    background-color: rgb(194, 55, 150);
+    grid-column:3/13 ;
+    grid-row:2/5 ;
     }
     .s2{
-    background-color: darkorchid;
-    grid-column:3/10;
-    grid-row:4/9 ;
+    background-color: blue;
+    grid-column:3/7;
+    grid-row:6/9 ;
     }
     .s3{
-        background-color: black;
+        background-color: blue;
        
-        grid-column:8/11;
-        grid-row:6/11 ;
+        grid-column:9/13;
+        grid-row:6/9 ;
     }
     .s4{
-        background-color: blue;
-        grid-column:6/9;
-        grid-row:8/10 ;
-    } */
+        background-color: black;
+        grid-column:3/13;
+        grid-row:10/13 ;
+    }
 
     footer{
         height: 15vh;
